welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: not found: value nbOccurence
		if (nums(i)==lookingFor) nbOccurence=nbOccurence+1
                                         ^