welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
	var nbOccurences=0
	for (i<-0 to nums.length-1){
		if (nums(i)==lookingFor) nbOccurence=nbOccurence+1
	}
	return nbOccurences
}
